@startuml

title __SCENES's Class Diagram__\n

  namespace uas.lntv.pacmangame {
    namespace Scenes {
      abstract class uas.lntv.pacmangame.Scenes.Controller {
          # GAME_CAM : OrthographicCamera
          # PauseReady : boolean
          # STAGE : Stage
          # TILE_SIZE : int
          # VIEWPORT : Viewport
          # downPressed : boolean
          # leftPressed : boolean
          # rightPressed : boolean
          # touchEvent : boolean
          # upPressed : boolean
          + Controller()
          + dispose()
          + isDownPressed()
          + isLeftPressed()
          + isRightPressed()
          + isTouchEvent()
          + isUpPressed()
          + pulledInput()
          + ready()
          + resize()
          + setPause()
      }
    }
  }
  

  namespace uas.lntv.pacmangame {
    namespace Scenes {
      class uas.lntv.pacmangame.Scenes.ControllerButtons {
          + ControllerButtons()
      }
    }
  }
  

  namespace uas.lntv.pacmangame {
    namespace Scenes {
      class uas.lntv.pacmangame.Scenes.ControllerJoystick {
          ~ touchDownPos : Vector3
          + ControllerJoystick()
      }
    }
  }
  

  namespace uas.lntv.pacmangame {
    namespace Scenes {
      class uas.lntv.pacmangame.Scenes.Hud {
          - LIVE_PAC_MEN : ArrayList<PacMan>
          - SCORE_LABEL : Label
          - STAGE : Stage
          - STAGES : ArrayList<String>
          - TIME_LABEL : Label
          - TIME_TEXT_LABEL : Label
          - VISIBLE : boolean
          - WARNING_TIME : int
          - red : boolean
          - time : float
          - timeStamp : float
          - warned : boolean
          + Hud()
          + animateLives()
          + dispose()
          + getMap()
          + getStage()
          + getTime()
          + resetLives()
          + resetTimeStamp()
          + update()
          + updateTime()
          - animate()
          - reset()
      }
    }
  }
  

  uas.lntv.pacmangame.Scenes.Controller o-- uas.lntv.pacmangame.Managers.Assets : ASSETS
  uas.lntv.pacmangame.Scenes.Controller o-- uas.lntv.pacmangame.Screens.MapScreen : SCREEN
  uas.lntv.pacmangame.Scenes.ControllerButtons -up-|> uas.lntv.pacmangame.Scenes.Controller
  uas.lntv.pacmangame.Scenes.ControllerJoystick -up-|> uas.lntv.pacmangame.Scenes.Controller
  uas.lntv.pacmangame.Scenes.ControllerJoystick o-- uas.lntv.pacmangame.Sprites.Joystick : joystick
  uas.lntv.pacmangame.Scenes.Hud o-- uas.lntv.pacmangame.Screens.MapScreen : SCREEN
  uas.lntv.pacmangame.Scenes.Hud o-- uas.lntv.pacmangame.Managers.Assets : assets


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
